@@ -1,46 +1,49 @@
-package Acme::MetaSyntactic::Themes::Abigail;
+package Acme::MetaSyntactic::zen;
 
-use 5.006;
 use strict;
 use warnings;
 no  warnings 'syntax';
 
-our $VERSION = '2013072902';
+use Acme::MetaSyntactic::MultiList;
+our @ISA = qw [Acme::MetaSyntactic::MultiList];
 
+sub TIEHASH  {bless { } => shift}
+sub FETCH    {return ''}
+sub FIRSTKEY {return}
+sub NEXTKEY  {return}
+
+our $VERSION = '2012051701';
+tie my %hash, __PACKAGE__;
+
+__PACKAGE__ -> init ({
+    default  =>  'en',
+    names    =>  \%hash,
+});
+
+
+#
+# Mega hack
+#
+sub name {
+    my @caller = caller (0);
+    return if $caller [0] eq 'Test::MetaSyntactic';
+    return ""
+}
+%Acme::MetaSyntactic::zen::MultiList = ("" => [""]);
 
 1;
 
-__END__
-
 =head1 NAME
 
-Acme::MetaSyntactic::Themes::Abigail - Abstract
+Acme::MetaSyntactic::zen - 
 
 =head1 DESCRIPTION
 
-This package installs a few more themes for C<< Acme::MetaSyntactic >>.
-
-Currently, the following themes are supplied: C<< all_in_the_family >>,
-C<< beatles >>, C<< bee_gees >>, C<< candyland >>, C<< charlies_angels >>,
-C<< cluedo >>, C<< compass >>, C<< cyclists >>, C<< evangelist >>,
-C<< famous_five >>, C<< jelly_belly >>, C<< kodokan >>, C<< michelin >>,
-C<< moonwalkers >>, C<< nehi >>, C<< noughts_and_crosses >>,
-C<< peter_and_the_wolf >>, C<< playing_cards >>, C<< primes >>,
-C<< shou_dou_qi >>, C<< sodor >>, C<< southpark >>, C<< stratego >>,
-C<< willy_wonka >>, and C<< zen >>.
-
-=head1 TODO
-
-More themes.
+The Zen theme. In all languages.
 
 =head1 SEE ALSO
 
-L<< Acme::MetaSyntactic >>
-
-=head1 DEVELOPMENT
-
-The current sources of this module are found on github,
-L<< git://github.com/Abigail/Acme-MetaSyntactic-Themes-Abigail.git >>.
+L<Acme::MetaSyntactic>, L<Acme::MetaSyntactic::MultiList>.
 
 =head1 AUTHOR
 
@@ -48,7 +51,7 @@ Abigail, L<< mailto:cpan@abigail.be >>.
 
 =head1 COPYRIGHT and LICENSE
 
-Copyright (C) 2012 by Abigail.
+Copyright (C) 2013 by Abigail.
 
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the "Software"),   
@@ -67,15 +70,5 @@ THE AUTHOR BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT
 OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
-
-=head1 INSTALLATION
-
-To install this module, run, after unpacking the tar-ball, the 
-following commands:
-
-   perl Makefile.PL
-   make
-   make test
-   make install
 
 =cut
